@@ -1,7 +1,8 @@
 Revision history for Database-Abstraction
 
 0.22
-	Force _open to be a private/protected method
+	Force _open/_log to be a private/protected method
+	Use Params::Get
 
 0.21	Tue Feb 11 07:45:15 EST 2025
 	Fix "Not an ARRAY reference"
